traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:21: error: ')' expected but $XMLSTART$< found.
  if (pas <diag){
          ^TraversalDiagonal:30: error: illegal start of simple expression
} 
^